fix(projects): align projects' heights @ Project List
Closes #121

--- a/brasilcomvc/projects/static/styl/res-desktop/project-list.styl
+++ b/brasilcomvc/projects/static/styl/res-desktop/project-list.styl
@@ -2,12 +2,19 @@ body.projects.project-list #main-content
 
 	li.project
 		col(4)
+		margin-bottom: 2em
 
 		figure
 			overflow: hidden
 
 			img
 				transition: time_animation
+
+		.short-description
+			line-height: 1.5em
+			height: @line-height * 3
+			margin-bottom: 1em
+			overflow: hidden
 
 		&:hover
 			box-shadow: inset 0 0 0 1px color_text_light
